tests/neg/i6056.scala
object i0{
    import i0.i0   // error
    def i0={
        import _  // error // error
        import    // error
    }             // error
}